Coverity analysis defect 121570: Uninitialized scalar variable

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 6.0.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Fully Compatible
    • ALL
    • Execution Team 2022-03-21
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      Uninitialized scalar variable

      The variable will contain an arbitrary value left from earlier computations. Use of an uninitialized variable
      /src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp:1100: UNINIT 121570 Declaring variable "wtRet" without initializer.
      /src/mongo/db/storage/wiredtiger/wiredtiger_kv_engine.cpp:1168: UNINIT 121570 Using uninitialized value "wtRet".

            Assignee:
            Yujin Kang Park
            Reporter:
            Coverity Collector User
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

              Created:
              Updated:
              Resolved: