SERVER-64025 Initialize wtRet and add non-zero check